# Poker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/core_game/: CMakeLists.txt  poker.cpp  poker.hpp
lib/strategies/: CMakeLists.txt  naive_player.cpp  naive_player.hpp
lib/utils/: CMakeLists.txt  consts.cpp  consts.hpp  deal_poker.cpp  deal_poker.hpp  rate_hand.cpp  types.cpp  types.hpp
src/: CMakeLists.txt
